Align table cells with numbers to the right fixes #432 (#577)
* Align table cells with numbers to the right

* Include top-level stats

* Fix build

* Update css class to NumericTableCell

--- a/frontend/src/components/App/App.css
+++ b/frontend/src/components/App/App.css
@@ -175,3 +175,7 @@ a {
 .ListItem.-Compact > div {
   top: 3px !important;
 }
+
+.NumericTableCell {
+  text-align: right;
+}
